Deploy/poi.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: poi-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: 80
#   selector:
#     app: poi
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: poi
  labels:
    app: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
        - name: poi
          image: registryhku7094.azurecr.io/poi-jvr:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
