Deploy/tripviewer.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: tripviewer-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: 80
#   selector:
#     app: tripviewer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
        - name: tripviewer
          image: registryhku7094.azurecr.io/tripviewer-jvr:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
