Deploy/user-java.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: user-java-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: 80
#   selector:
#     app: user-java
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-vaulttripinsights-system-msi"
      containers:
        - name: user-java
          image: registryhku7094.azurecr.io/user-java-moka:latest
          volumeMounts:
            - name: secrets-store01-inline
              mountPath: "/mnt/secrets"
              readOnly: true
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
