Deploy/userprofile.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: userprofile-lb
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api
  name: userprofile
  labels:
    app: userprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: registryhku7094.azurecr.io/userprofile-jvr:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
